kubernetes/01.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
spec:
  type: ClusterIP
  selector:
    app: spring-petclinic
  ports:
    - port: 80
      targetPort: 8080
