kubernetes/03.virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petclinic-vs
  namespace: spring-petclinic
spec:
  hosts:
  - "petclinic.test.com"
  gateways:
  - petclinic-gw
  http:
  - route:
    - destination:
        host: spring-petclinic.spring-petclinic.svc.cluster.local
        port:
          number: 80
      weight: 100
